# balancecore_bot_tg_project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: admin_ui.py  main.py  ozon_webhooks.py  paymaster_webhooks.py
api/static/: admin.js  styles.css
api/templates/: admin_dashboard.html  admin_users.html  admin_withdraws.html  base.html  login.html  users.html  withdraws.html
bot/: main.py  states.py
bot/handlers/: deposit.py  menu.py  withdraw.py
bot/keyboards/: menu.py
bot/middlewares/: database.py
core/: celery_app.py  config.py  db.py
core/models/: __init__.py  base.py  deposit.py  payment.py  tariff.py  transaction.py  user.py  withdraw_request.py
core/repositories/: balance.py
core/schemas/: public.py
core/services/: interest.py  ozon.py  paymaster.py  payment.py
infra/: seed_tariffs.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_add_payments.py  003_add_deposits.py  0fb1b5a6b5e9_init_schema.py
scripts/: bootstrap.sh  daily_interest.py  dev.sh
tests/: test_balance_autocreate.py  test_health.py
