[project]
name = "balancecore-bot"
version = "0.1.0"
description = "BalanceCore Bot: Telegram bot + FastAPI backend"
requires-python = ">=3.11"

dependencies = [
  "aiogram>=3.7.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.0",
  "celery>=5.3.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0"
]

[tool.uvicorn]
factory = false
reload = true
host = "0.0.0.0"
port = 8000