[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balancecore-bot"
version = "1.0.0"
description = "Telegram bot for balance management with deposits and withdrawals"
authors = [{name = "BalanceCore Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram==3.2.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "redis==5.0.1",
    "celery==5.3.4",
    "jinja2==3.1.2",
    "aiofiles==23.2.1",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
